<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"
    android:weightSum="100">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cakeNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ingredientButton"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textColor="@color/secondaryText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ingredientButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="Ingredient"
            android:textColor="@color/secondaryText"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stepRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>


    </RelativeLayout>


</ScrollView>